--- a/brain-games/pyproject.toml
+++ b/brain-games/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Alexandr221994 <alexandr.mityshkin1@gmail.com>"]
 readme = "README.md"
-packages = [{include = "hexlet_code"}, {include = "brain_games"}]
+packages = [{include = "brain_games"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
