refactor: calc_game.py, even_game.py, prime_game.py and update pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "brain-code"
+name = "hexlet-code"
 version = "0.1.0"
 description = "project containing 5 mini-games"
 authors = ["Alexandr221994 <alexandr.mityshkin1@gmail.com>"]
